# AI_actuarial_inforsearch

./: .env.example  .gitignore  .pre-commit-config.yaml  .replit  20260208_SERVICE_START_GUIDE.md  AGENTS.md  CODEX_REVIEW.md  CODE_REVIEW_IMPLEMENTATION.md  CODE_REVIEW_REPORT.md  Caddyfile  DATABASE_BACKEND_GUIDE.md  Dockerfile  FILE_FORMAT_SELECTOR_IMPLEMENTATION_REPORT.md  FILE_FORMAT_SELECTOR_PLAN.md  IMPLEMENTATION_NOTES_DATABASE_BACKEND.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_PHASE2.md  INTEGRATION_NOTES.md  MERGE_CONFLICTS.md  MERGE_DECISION.md  MODULAR_SYSTEM_GUIDE.md  PHASE1_IMPLEMENTATION.md  PHASE1_VISUAL_GUIDE.md  PHASE2_COMPLETION_SUMMARY.md  PHASE2_IMPLEMENTATION.md  PHASE3_COMPLETE_SUMMARY.md  PHASE3_IMPLEMENTATION.md  PHASE3_IMPROVEMENT_PLAN.md  PHASE3_README.md  PHASE4_IMPROVEMENT_PLAN.md  PLANNING_WEB_FIXES.md  PROJECT_IMPROVEMENT_PLAN.md  QUICK_REFERENCE.md  QUICK_START_NEW_FEATURES.md  README.md  README.zh-CN.md  REVIEW_COMPLETION_NOTICE.txt  REVIEW_SUMMARY.md  SECURITY.md  SECURITY_SUMMARY.md  (+32 more)
.codex/: README.md
.hermes/: project-status.md
ai_actuarial/: ai_runtime.py  catalog.py  catalog_incremental.py  catalog_llm.py  cli.py  config.py  crawler.py  db_backend.py  db_models.py  llm_models.py  markdown_conversion_config.py  search.py  shared_auth.py  shared_runtime.py  storage.py  storage_factory.py  storage_v2.py  storage_v2_auth.py  storage_v2_full.py  storage_v2_rag.py  task_runtime.py  utils.py  web_listening_rule.py
client/: index.html
config/: __init__.py  categories.yaml  markdown_conversion.yaml  settings.py  sites.yaml  (+1 more)
(+459 files in other folders)
