[project]
name = "ai_actuarial_inforsearch"
version = "0.1.0"
description = "Actuarial AI article/file discovery and archiving tool"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
ai-actuarial = "ai_actuarial.cli:main"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    '^\.venv/',
    '^venv/',
    '^build/',
    '^dist/',
]

[tool.bandit]
exclude_dirs = ["tests", "test_*.py", ".venv", "venv"]
skips = ["B101", "B601"]  # Skip assert warnings and shell injection warnings for safe usage

[tool.pytest.ini_options]
testpaths = [".", "tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
